# Rocket_simulator

./: .clang-format  ANALISI_SPINTA_REPORT.md  CMakeLists.txt  README.md  analisi_dpc_dt.py  analisi_spinta.py  build.yml  button.h  engine.cpp  engine.h  grafica.cpp  graph_test.cpp  info_prog.odt  interface.cpp  interface.h  main.cpp  main_test.cpp  menu.h  navigate.h  output_air.txt  output_rocket.txt  relazione_razzo.odt  res.cpp  rocket.cpp  rocket.h  sfml-app  simulation.cpp  simulation.h  test.cpp  test_calc.cpp  thetha_data.txt  tot1.cpp  unit_tests.cpp  vector_math.cpp  vector_math.h  z_graph.cpp
.github/workflows/: release.yml
assets/: output_air.txt  output_rocket.txt
assets/input_data/: simulation_params.json  simulation_params.schema.json  simulation_params_test.json  theta_data.txt
output/: output_air.txt  output_rocket.txt
